--- a/mysite/shopapp/templates/shopapp/footer.html
+++ b/mysite/shopapp/templates/shopapp/footer.html
@@ -1,26 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Главная страница{% endblock %}</title>
-</head>
-<body>
-    <header>
-        <h1>{{ quote.text }}</h1>
-    </header>
-    <div class="content">
-    <p><strong>Источник: {{ quote.source }}</strong></p>
-    <p>&#128065 {{ quote.impressions}} | &#128077 {{ quote.likes }} | &#128078 {{ quote.dislikes }}</p>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit" name="like" value="{{ quote.id }}">Like</button>
-        <button type="submit" name="dislike" value="{{ quote.id }}">Dislike</button>
-    </form>
-    </div>
-    <br />
-    <a href="{% url 'add_new_quote' %}">Добавить новую цитату</a>
-    <br />
-    <p><a href="{% url 'popular_quotes' %}">Посмотреть 10 самых популярных цитат</a></p>
+    {% include 'footer.html' %}
     <footer>
         <br />
         <p>Цель: сделать с помощью Django страницу, где при каждом открытии будет отображаться случайная цитата из фильма или книги</p>
@@ -37,13 +17,4 @@
             </ul>
         </ul>
     </footer>
-</body>
 </html>
-
-            <!--
-        {% block content %}
-        {% for product in products %}
-            <p>{{ product }}</p>
-        {% endfor %}
-    {% endblock %}
--->
