--- a/mysite/shopapp/templates/shopapp/add_new_quote.html
+++ b/mysite/shopapp/templates/shopapp/add_new_quote.html
@@ -34,21 +34,10 @@
         <br />
         <button type="submit">Добавить</button>
     </form>
-    <footer>
-        <br />
-        <p>Цель: сделать с помощью Django страницу, где при каждом открытии будет отображаться случайная цитата из фильма или книги</p>
-        <p>Требования:</p>
-        <ul>    <li>Добавление новых цитат в общий пул из интерфейса приложения.</li>
-                <li>Есть следующие ограничения:</li>
-            <ul>
-            <li>Нельзя допускать дубликаты</li>
-            <li>У одного источника (фильм, книга и т.д.) не должно быть одновременно больше трех цитат</li>
-            <li>У каждой цитаты есть свой “вес”, чем он выше, тем больше шанс выдачи на странице. Это значение должно быть корректируемым и задаваться при добавлении</li>
-            <li>На странице есть счетчик просмотров, а под цитатой можно поставить лайк / дизлайк</li>
-            <li>Наличие дополнительной страницы с отображением 10 самых популярных цитат (по лайкам). Можно добавить другие выборки, фильтры или даже сделать простой дашборд</li>
-            <li>Приложение должно быть доступным для проверки. Можно захостить на https://www.pythonanywhere.com/, поделиться через ngrok или воспользоваться иным способом</li>
-            </ul>
-        </ul>
-    </footer>
+
+    <br />
+    <a href="{% url 'index' %}">Вернуться на главную страницу</a>
+
+    {% include 'footer.html' %}
 </body>
 </html>
